<resources>
    <string name="app_name">Cinema </string>
    <string name="label_title">Μovie Title </string>
    <string name="label_category">Movie Category </string>
    <string name="label_date">Movie Date </string>
    <string name="label_time">Movie Time </string>
    <string name="label_price">Ticket Price </string>
    <string name="button_search">Search </string>
    <string name="label_description">Description </string>
    <string name="website">Visit IMDB Website </string>
</resources>