<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroud_cinema"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="5dp">

    <WebView
        android:id="@+id/webview_player_view"
        android:layout_width="379dp"
        android:layout_height="141dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"></WebView>

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/webview_player_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/backgroud_cinema"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageViewCover"
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <!-- Name Label -->
            <TextView
                android:id="@+id/movie_details_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dip"
                android:paddingBottom="2dip"
                android:textColor="@color/teal_700"
                android:textSize="14sp"
                android:textStyle="bold" />
            <!-- Description label -->

            <!-- Linear layout for cost and price Cost: Rs.100 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- category Label -->
                <TextView
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/label_category"
                    android:textColor="@color/white"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/movie_details_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="@color/teal_700"
                    android:textStyle="italic"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Cost Label -->
                <TextView
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/label_date"
                    android:textColor="@color/white"
                    android:textStyle="bold"></TextView>
                <!-- Price Label -->
                <TextView
                    android:id="@+id/movie_details_date"
                    android:layout_width="267dp"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:textColor="@color/teal_700"
                    android:textStyle="italic"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/label_time"
                    android:textColor="@color/white"
                    android:textStyle="bold"></TextView>
                <!-- Price Label -->
                <TextView
                    android:id="@+id/movie_details_time"
                    android:layout_width="153dp"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:textColor="@color/teal_700"
                    android:textStyle="italic"></TextView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/label_price"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/movie_details_price"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="@color/teal_700"
                    android:textStyle="italic"></TextView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verticalContainer"
        android:layout_width="345dp"
        android:layout_height="265dp"
        android:layout_above="@+id/buttonVisitWebsite"
        android:layout_below="@+id/mainContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroud_cinema"
            android:text="@string/label_description"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_details_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroud_cinema"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonVisitWebsite"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/website" />


</RelativeLayout>

